<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:paddingBottom="@dimen/vertical_page_margin"
                  android:paddingTop="@dimen/vertical_page_margin"
                  android:paddingLeft="@dimen/horizontal_page_margin"
                  android:paddingRight="@dimen/horizontal_page_margin">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="@dimen/vertical_page_margin"
                  android:text="@string/main_message"/>

        <!--Calculator-->

        <Switch android:id="@+id/toggle_calculator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/toggle_calculator"/>

        <!--Chrome (App restrictions)-->

        <Switch android:id="@+id/toggle_chrome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="8dp"
                android:text="@string/toggle_chrome"/>

        <Button android:id="@+id/set_chrome_restrictions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_chrome_restrictions"/>

        <!--Intent Forwarding-->
        <Button android:id="@+id/enable_forwarding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/enable_forwarding"/>

        <Button android:id="@+id/disable_forwarding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable_forwarding"/>

        <Button android:id="@+id/send_intent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_intent_text"/>

        <!-- Remove profile -->

        <Button android:id="@+id/remove_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/remove_profile"/>
    </LinearLayout>
</ScrollView>